@@ -4,6 +4,9 @@ Revision history for Mason-Tidy
 
 2.56  Sep 30, 2012
 
+- Blank %-lines: Don't add an extra space, and don't remove (Pedro Melo)
+- Fix handling of empty or nearly empty components and methods
+
 2.55  Sep 30, 2012
 
 - Remove undeclared dependency on IPC::Run3
